@@ -1,4 +1,4 @@
-<h2>{$where}:
+<h2>{if $searchArtist}<a href="#" onclick="artist{if $smarty.const.find_over_search}Find{else}Search{/if}('{$searchArtist|addslashes}'); return false">{$searchArtist}</a> - {else}{$where}: {/if}
 <a href="#" onclick="javascript:
 {foreach from=$albums item=album}
 {	if $album->getName() == "" || $where == "album"}
@@ -16,7 +16,7 @@ return false" title="{$what}">{$what}</a>
 	<li class="track"><a href="#" onclick="javascript:queueFile ('{$track.file|addslashes}'); return false" title="{$track.file}">{if $track.Track && $where == "album"}{$track.Track} - {/if}{$track.Artist} - {$track.Title}</a></li>
 {		/foreach}
 {	else}
-	<li class="album"><a href="#" onclick="javascript:album{if $smarty.const.find_over_search}Find{else}Search{/if}('{$album->getName()|addslashes}'); return false">{if $where == "genre"}{$album->getArtist()} - {/if}{$album->getName()}</a>{if $where != "genre"} <span style="font-style: italic">[{$album->getArtist()}]</span>{/if}</li>
+	<li class="album"><a href="#" onclick="javascript:album{if $smarty.const.find_over_search}Find{else}Search{/if}('{$album->getName()|addslashes}', '{$album->getArtist()|addslashes}'); return false">{if $where == "genre"}{$album->getArtist()} - {/if}{$album->getName()}</a>{if $where != "genre"} <span style="font-style: italic">[{$album->getArtist()}]</span>{/if}</li>
 {	/if}
 {/foreach}
 </ul>
